--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,15 @@
 }
 
 .align-items-center {
-    align-items: center;
+   align-items: center;
 }
 
-.align-item{
-    align-items: center;
+.text-align-center{
+    text-align: center;
+}
+
+.color-black{
+    color: black;
 }
 
 .flex-wrap{
@@ -139,8 +143,9 @@
 
 .img-position {
     position: absolute;
-    left: -3px;
-    width: 50%;
+    left: -1px;
+    top: 130px;
+   width: 45%;
 }
 
 
@@ -296,11 +301,9 @@
 }
 
 .padding-top-bottom8 {
-    padding-top: 90px;
-    padding-bottom: 150px;
-
+    padding-top: 150px;
+    padding-bottom: 250px;
 }
-
 
 .padding-bottom {
     padding-bottom: 18px;
@@ -333,11 +336,17 @@
     position: relative;
 }
 .z-index{
-    z-index: 2;
+    z-index: 3;
 }
 
 .bg-color-blue{
    color: #1E71FF;
+}
+
+.nav-color{
+    background-color:#1E71FF ;
+    z-index: 1;
+
 }
 
 .margin_left8{
@@ -345,7 +354,10 @@
     margin-left: 9px;
 }
 
-
+.position-sticky{
+    position: sticky;
+    top: 0%;
+}
 
 
 @media (max-width: 992px) {
@@ -446,7 +458,7 @@
     }
 
     .margin-md-left {
-        margin-left: 29px;
+        margin-left: 4px;
     }
 
     .po-unset-md {
@@ -516,8 +528,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      z-index: 1;
-
+      z-index: 3;
     }
 
     label[for="icon-box"]>span{
@@ -525,11 +536,14 @@
         width: 80%;
         border-radius: 10px;
         background-color: #FFFFFF;
+        
     }
 
     input[type="checkbox"]:checked+div.nav-hide{
         opacity: 1;
         left: 0%;
+        z-index: 2;
+        
     }
 
 }
